name:                fx991ms
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zqureshi/fx991ms
license:             MIT
license-file:        LICENSE
author:              Zeeshan Qureshi
maintainer:          mail@zqureshi.in
copyright:           2017 Zeeshan Qureshi
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , megaparsec == 5.2.0
  default-language:    Haskell2010

executable fx991ms-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fx991ms
  default-language:    Haskell2010

test-suite fx991ms-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fx991ms
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zqureshi/fx991ms
